--- a/app/company.jade
+++ b/app/company.jade
@@ -13,8 +13,8 @@ block content
         p Мы проводим предварительные обследования территории, занимаемся разработкой технического задания на проектирование и строительство, а также технико-экономического обоснования строительства и инвестиций в строительство, занимаемся оформлением разрешительной, конструкторской, проектной, рабочей документацией, получаем технические условия на подключение объекта к инженерным сетям, выполняем строительные работы.
       ul.documents-ul
         li
-          a(href="#") Устанвной документ.
-          span JPG, 659 KB
+          a(href="#").disabled Уставной документ
+          span  JPG, 659 KB
       a(href="http://stroikov-group.ru/" target="_blank").company-link
 
     .grid_1
@@ -27,6 +27,6 @@ block content
           p р/с 40702810300050000057
           p в Ростовском филиале ОАО «АктивКапитал Банк»
           p БИК 046029310
-          p к/с 30101810300000000310 в РКЦ г. Азов
+          p к/с 30101810300000000310 в РКЦ<br>г. Азов
     .clearfix
   
