--- a/app/index.jade
+++ b/app/index.jade
@@ -16,10 +16,10 @@ block content
         .subs
           .subs-cont
             .sub-text
-              span.date 24.10.2015
+              span.date 20.11.2014
               br
-              a(href="#").text Запуск первой очереди строительства.
+              a(href="news").text Проданы 2 квартиры
             .sub-text
-              a(href="#").icon-link <i class="icon icon-file"></i> Правовая документация
+              a(href="about#documents").icon-link <i class="icon icon-file"></i> Правовая документация
       
   
