--- a/app/layouts.jade
+++ b/app/layouts.jade
@@ -153,8 +153,8 @@ block content
             .text Внушительным габаритам помещения отвечают и пропорции двухстороннего камина на границе гостиной и столовой. Второй этаж традиционно заняли приватные комнаты, в цоколе оборудовали развлекательную зону и спа, а в мансардном этаже с открытой террасой—комнату отдыха. Столовой и кухне мы отвели более камерное помещение, а гостиную разместили в двусветном объёме. С двух сторон её огибают холл и длинный коридор, куда выходят двери рабочего кабинета, гостевого блока и лифтовой холл. Чрезмерную вертикальность гостиной мы компенсировали подбором подчёркнуто массивных элементов интерьера. Над диванной зоной парит созданная по авторскому проекту трёхметровая люстра.
             .documents-ul
               li
-                a(href="#") Вариант планировки 1.
-                span PDF, 81 KB
+                a(href="#").disabled Вариант планировки 1
+                span  PDF, 81 KB
         .js-tab.layout-about
           .layout-map.second-var
             ul.rooms
@@ -283,8 +283,8 @@ block content
             .text Внушительным габаритам помещения отвечают и пропорции двухстороннего камина на границе гостиной и столовой. Второй этаж традиционно заняли приватные комнаты, в цоколе оборудовали развлекательную зону и спа, а в мансардном этаже с открытой террасой—комнату отдыха. Столовой и кухне мы отвели более камерное помещение, а гостиную разместили в двусветном объёме. С двух сторон её огибают холл и длинный коридор, куда выходят двери рабочего кабинета, гостевого блока и лифтовой холл. Чрезмерную вертикальность гостиной мы компенсировали подбором подчёркнуто массивных элементов интерьера. Над диванной зоной парит созданная по авторскому проекту трёхметровая люстра.
             .documents-ul
               li
-                a(href="#") Вариант планировки 2.
-                span PDF, 81 KB
+                a(href="#").disabled Вариант планировки 2
+                span  PDF, 81 KB
         .js-tab.layout-about
           .layout-map.free-var
           .layout-info
@@ -292,8 +292,8 @@ block content
             .text Внушительным габаритам помещения отвечают и пропорции двухстороннего камина на границе гостиной и столовой. Второй этаж традиционно заняли приватные комнаты, в цоколе оборудовали развлекательную зону и спа, а в мансардном этаже с открытой террасой—комнату отдыха. Столовой и кухне мы отвели более камерное помещение, а гостиную разместили в двусветном объёме. С двух сторон её огибают холл и длинный коридор, куда выходят двери рабочего кабинета, гостевого блока и лифтовой холл. Чрезмерную вертикальность гостиной мы компенсировали подбором подчёркнуто массивных элементов интерьера. Над диванной зоной парит созданная по авторскому проекту трёхметровая люстра.
             .documents-ul
               li
-                a(href="#") Свободная планировка.
-                span PDF, 81 KB
+                a(href="#").disabled Свободная планировка
+                span  PDF, 81 KB
     
     .clearfix
   
