--- a/app/news.jade
+++ b/app/news.jade
@@ -7,12 +7,17 @@ block content
   .wrapper
     h1 Новости
   ul.news-ul
-    each i in [1,2,3]
-      li.news-li
-        div(style="background-image: url(images/tmp/news#{i}.jpg);").news-poster
-        .news-info
-          .date 23 Сентября 2014
-          .title НАЧАЛИСЬ ПРОДАЖИ КВАРТИР ВО ВТОРОЙ ОЧЕРЕДИ
-          .text Вторая очередь находится в процессе строительства, так что сейчас купить квартиру можно по самой выгодной цене. Поторопитесь, чем выше становится  «Большой», тем выше стоимость квадратного метра. Строительство ведется  при финансовой поддержке «Сбербанка», что гарантирует надежность ваших вложений!
+    li.news-li
+      //- div(style="background-image: url(images/tmp/news#{i}.jpg);").news-poster
+      .news-info
+        .date 20 ноября 2014
+        .title Проданы 2 квартиры
+        .text На текущем этапе строительства дома можно купить квартиру по самой выгодной цене. Поторопитесь, чем выше становится «Крепостной, 100», тем выше стоимость квадратного метра. Строительство ведется при финансовой поддержке банков партнеров «Сбербанка», «ВТБ24» и «Центр-Инвест», что гарантирует надежность ваших вложений.
+
+    li.news-li
+      .news-info
+        .date 18 сентября 2014
+        .title Получено разрешение на строительство
+        .text Получено разрешение на строительство дома от департамента архитектуры и градостроительства города Ростова-на-Дону.
           
   
