--- a/app/mortgage.jade
+++ b/app/mortgage.jade
@@ -18,13 +18,13 @@ block content
           table
             tr
               td Первоначальный взнос
-              td от 13 %
+              td от 10%
             tr
               td Срок кредита
-              td до 30 лет (включительно)
+              td до 30 лет
             tr
               td Процентная ставка в рублях
-              td 13 %
+              td 12.5%
             tr
               td Информация о предложении
               td
@@ -63,85 +63,62 @@ block content
           table
             tr
               td Первоначальный взнос
-              td от 13 %
+              td от 10%
             tr
               td Срок кредита
-              td до 30 лет (включительно)
+              td до 20 лет
             tr
               td Процентная ставка в рублях
-              td 13 %
+              td от 9,5% до 13,25% (зависит от размера первоначального взноса и срока кредита)
             tr
               td Информация о предложении
               td
-                .m-table-block.
-                  <p>С 01 июля 2014 года по 30 сентября 2014 года (включительно) подайте заявку на жилищный кредит по ставке всего 13%!</p>
-                  <ul>
-                    <li>Приобретение жилья в ЖК «Большой»
-                    <li>Срок завершения строительства не ограничен условиями акции;
-                    <li>Документы по кредитуемому жилому помещению могут быть предоставлены в течение 120 календарных дней с даты принятия решения Банком о выдаче кредита.
-                    <li>Минимальная сумма кредита – 45 000 рублей.
-                    <li>Максимальная сумма кредита не должна превышать меньшую из величин:
-                    <li>87% договорной стоимости кредитуемого жилого помещения;
-                    <li>87% оценочной стоимости иного оформляемого в залог жилого помещения.
-                    <li>Преимущества программ жилищного кредитования в Сбербанке:
-                    <li>Достаточно паспорта РФ для подачи заявки на кредит клиентам, получающим заработную плату на счет, открытый в Сбербанке.
-                  </ul>
-                .m-table-block.
-                  <p>В качестве первоначального взноса могут быть использованы:</p>
-                  <ul>
-                    <li>Материнский капитал;
-                    <li>Жилищные сертификаты.
-                    <li>Есть возможность воспользоваться налоговыми льготами, снижающими расходы на жилье:
-                    <li>Имущественный вычет (единовременно);
-                    <li>Налоговый вычет (ежегодно).
-                    <li>Для подтверждения дохода может быть предоставлена справка по форме Банка.
-                    <li>Для увеличения суммы получаемого кредита могут быть привлечены созаемщики.
-                    <li>Удобное погашение кредита: достаточно внести необходимую сумму на счет любым удобным способом, погашение произойдет автоматически в соответствии с графиком платежей.
-                  </ul>
+                .m-table-blocks
+                  .m-table-block.
+                    <p>Стандартные условия ипотеки «Жилая недвижимость»</p>
+                    <ul class="us-list">
+                      <li>возможно полное досрочное или частичное погашение без штрафных санкций;
+                      <li>погашение кредита аннуитетными платежами;
+                      <li>оформление страховки не обязательно;
+                      <li>обеспечение кредита –  залог приобретаемой недвижимости (при необходимости поручительство физических или юридических лиц).
+                    </ul>
                 p.
-                  С подробной информацией о порядке получения кредита вы можете ознакомится на сайте Сбербанка <a href="http://www.sberbank.ru/ru/person/promo/credits/121230">http://www.sberbank.ru/ru/person/promo/credits/121230</a>.
+                  С подробной информацией о порядке получения кредита вы можете ознакомиться на сайте «Центр-инвеста»   <a href="https://www.centrinvest.ru/ru/fiz/kreditovanie/ipoteka/zhilaya-nedvizhimost">https://www.centrinvest.ru/ru/fiz/kreditovanie/ipoteka/zhilaya-nedvizhimost</a>
         .title.m-vtb24
         .mortgage-table
           table
             tr
               td Первоначальный взнос
-              td от 13 %
+              td 20% (базовый размер по кредитам в рублях РФ)<br>30% (базовый размер по кредитам в долларах США или евро)
             tr
               td Срок кредита
-              td до 30 лет (включительно)
+              td до 20 лет (кратно 12 месяцам)
             tr
               td Процентная ставка в рублях
-              td 13 %
+              td от 13,05%
             tr
               td Информация о предложении
               td
                 .m-table-block.
-                  <p>С 01 июля 2014 года по 30 сентября 2014 года (включительно) подайте заявку на жилищный кредит по ставке всего 13%!</p>
-                  <ul>
-                    <li>Приобретение жилья в ЖК «Большой»
-                    <li>Срок завершения строительства не ограничен условиями акции;
-                    <li>Документы по кредитуемому жилому помещению могут быть предоставлены в течение 120 календарных дней с даты принятия решения Банком о выдаче кредита.
-                    <li>Минимальная сумма кредита – 45 000 рублей.
-                    <li>Максимальная сумма кредита не должна превышать меньшую из величин:
-                    <li>87% договорной стоимости кредитуемого жилого помещения;
-                    <li>87% оценочной стоимости иного оформляемого в залог жилого помещения.
-                    <li>Преимущества программ жилищного кредитования в Сбербанке:
-                    <li>Достаточно паспорта РФ для подачи заявки на кредит клиентам, получающим заработную плату на счет, открытый в Сбербанке.
+                  <p>ВТБ24 отменяет аккредитацию на новостройки! Теперь вы можете оформить ипотеку на квартиру в любом строящемся доме без дополнительных согласований и документов.</p>
+                  <ul class="us-list">
+                    <li>не требуется аккредитация объекта в банке;
+                    <li>сумма кредита – от 500 тыс. до 2 млн руб.;
+                    <li>кредит предоставляется на покупку квартиры в любой новостройке;
+                    <li>без комиссий за рассмотрение заявки и выдачу кредита;
+                    <li>кредит погашается досрочно без комиссий и штрафов с момента его получения;
+                    <li>оценку объекта недвижимости банк производит самостоятельно.
                   </ul>
                 .m-table-block.
-                  <p>В качестве первоначального взноса могут быть использованы:</p>
-                  <ul>
-                    <li>Материнский капитал;
-                    <li>Жилищные сертификаты.
-                    <li>Есть возможность воспользоваться налоговыми льготами, снижающими расходы на жилье:
-                    <li>Имущественный вычет (единовременно);
-                    <li>Налоговый вычет (ежегодно).
-                    <li>Для подтверждения дохода может быть предоставлена справка по форме Банка.
-                    <li>Для увеличения суммы получаемого кредита могут быть привлечены созаемщики.
-                    <li>Удобное погашение кредита: достаточно внести необходимую сумму на счет любым удобным способом, погашение произойдет автоматически в соответствии с графиком платежей.
+                  <p>Значение годовой процентной ставки зависит от наличия у вас страхового полиса по рискам:</p>
+                  <ul class="us-list">
+                    <li>утрата жизни и трудоспособности заёмщика;
+                    <li>утрата или повреждение приобретаемой квартиры;
+                    <li>прекращение или ограничение права собственности на квартиру.
+                    <li>Есть возможность сделать ипотеку дешевле:
+                    <li>если вы зарплатный клиент банка «ВТБ 24»;
+                    <li>если вы владелец пакета «Привилегия» или «Прайм».
                   </ul>
-                p.
-                  С подробной информацией о порядке получения кредита вы можете ознакомится на сайте Сбербанка <a href="http://www.sberbank.ru/ru/person/promo/credits/121230">http://www.sberbank.ru/ru/person/promo/credits/121230</a>.
 
 
 
