--- a/app/styles/pages/_mortgage.scss
+++ b/app/styles/pages/_mortgage.scss
@@ -73,11 +73,11 @@
 					font-size: 14px;
 					box-sizing: border-box;
 
-					&:first-child {
+					&:nth-of-type(1) {
 						padding-right: 50px;
 					}
 
-					&:last-child {
+					&:nth-of-type(2) {
 						padding-left: 50px;
 					}
 				}
