--- a/app/styles/pages/_news.scss
+++ b/app/styles/pages/_news.scss
@@ -16,13 +16,13 @@
 			width: 250px;
 			background-size: cover;
 			background-position: center center;
+			margin-right: 50px;
 		}
 
 		.news-info {
 			display: inline-block;
 			vertical-align: top;
 			width: 680px;
-			margin-left: 50px;
 			font-size: 16px;
 
 			.date {
