--- a/app/about.jade
+++ b/app/about.jade
@@ -25,7 +25,7 @@ block content
 
   .us-block
     .wrapper
-      .us-title Приемущества дома
+      .us-title Преимущества дома
       ul.benefits
         li
           div(style="background-image: url(images/benefits/panel.svg);").benefit-icon
@@ -40,14 +40,12 @@ block content
           .title МЕСТОПОЛОЖЕНИЕ
           .text.
             Пешеходная улица, развитая инфраструктура, отсутствие загруженных транспортных магистралей – вот главное в месторасположении нового жилого комплекса. Все необходимое находится в радиусе 500м. Это позволит вам больше времени посвятить семье, отдыху, друзьям. 
+        
         li
           div(style="background-image: url(images/benefits/kapitel.svg);").benefit-icon
           .title КАЧЕСТВЕННАЯ ОТДЕЛКА
           .text.
-            Качественная отделка подъездов.
-            Современные лифты.
-            Благоустроенная закрытая внутренняя территория, детские игровые комплексы, малые архитектурные формы. Вечернее и ночное освещение территории комплекса и дворовых территорий.
-            Многоярусный и наземный паркинги для жильцов комплекса с возможностью. 
+            При отделке фасада и внутренних помещений дома используются только самыу лучшие современные отделочные материалы. Партнерские отношения с ведущими европейскими брендами позволяет использовать при отделке дома уникальные по красоте и функциональным качествам материалы.
         
         li
           div(style="background-image: url(images/benefits/car.svg);").benefit-icon
