--- a/app/company.jade
+++ b/app/company.jade
@@ -5,17 +5,17 @@ block vars
 
 block content
   .wrapper
-    h1 ГРУППА КОМПАНИЙ<br>«СТРОЙКОВЪ»
+    h1 ООО «НАШ ГОРОДЪ»
   .container.company-about
     .grid_3
       .desc 
-        p Строительная компания ООО СК «Стройковъ» предлагает широкий спектр услуг в сфере строительства, производства и финансовой деятельности. Наличие в штате опытных высококвалифицированных специалистов практически всех аспектов строительного производства позволяет решать в кратчайшие сроки задачи различного характера и уровня сложности по конкурентным ценам. В основе работы с Заказчиком для компании приоритетным является конструктивный диалог и своевременное качественное исполнение взятых на себя обязательств. Мы придерживаемся передовых технологий, работаем на самых перспективных площадках города, имеем опыт реализации значимых для Ростовской области объектов, претворяем в жизнь самые смелые решения.
+        p Строительная компания ООО «НАШ ГОРОДЪ» предлагает широкий спектр услуг в сфере строительства, производства и финансовой деятельности. Наличие в штате опытных высококвалифицированных специалистов практически всех аспектов строительного производства позволяет решать в кратчайшие сроки задачи различного характера и уровня сложности по конкурентным ценам. В основе работы с Заказчиком для компании приоритетным является конструктивный диалог и своевременное качественное исполнение взятых на себя обязательств. Мы придерживаемся передовых технологий, работаем на самых перспективных площадках города, имеем опыт реализации значимых для Ростовской области объектов, претворяем в жизнь самые смелые решения.
         p Мы проводим предварительные обследования территории, занимаемся разработкой технического задания на проектирование и строительство, а также технико-экономического обоснования строительства и инвестиций в строительство, занимаемся оформлением разрешительной, конструкторской, проектной, рабочей документацией, получаем технические условия на подключение объекта к инженерным сетям, выполняем строительные работы.
       ul.documents-ul
         li
           a(href="#").disabled Уставной документ
           span  JPG, 659 KB
-      a(href="http://stroikov-group.ru/" target="_blank").company-link
+      //- a(href="http://stroikov-group.ru/" target="_blank").company-link
 
     .grid_1
       .bank
