--- a/app/contacts.jade
+++ b/app/contacts.jade
@@ -9,9 +9,14 @@ block content
     .contacts-container
       ul.contact-blocks
         li.contact-block
+          .title Адрес
+          .text
+            p 344019, Ростов-на-Дону,
+            p 16-я линия, 16 б, офис 1
+            p Телефон: <a href="tel:+78632955110" class="phone-link">+7 (863) 295-51-10</a>
+        li.contact-block
           .title Отдел продаж
           .text
-            p Ростов-на-Дону, 16-я линия, 16 б 
             p Телефон: <a href="tel:+78632955111" class="phone-link">+7 (863) 295-51-11</a>
             p Факс: <a href="tel:+78632955112" class="phone-link">+7 (863) 295-51-12</a>
             p
@@ -19,7 +24,6 @@ block content
         li.contact-block
           .title КЛИЕНТСКИЙ СЕРВИС
           .text
-            p Ростов-на-Дону, 16-я линия, 16 б, 
             p Телефон: <a href="tel:+78632955110" class="phone-link">+7 (863) 295-51-10</a>
             p Факс: <a href="tel:+78632955110" class="phone-link">+7 (863) 295-51-10</a>
             p
