--- a/app/layout.jade
+++ b/app/layout.jade
@@ -43,27 +43,17 @@ html.no-js
               li.nav-li
                 a(href="news" class="#{bodyClass=='news' ? 'active' : ''}") Новости
               li.nav-li
-<<<<<<< HEAD
-                a(href="contacts" class="#{bodyClass=='contacts' ? 'active' : ''}") Контакты
-=======
-                a(href="about.html#documents" class="#{bodyClass=='news' ? 'active' : ''}") Документы
+                a(href="about#documents") Документы
               li.nav-li
-                a(href="contacts.html" class="#{bodyClass=='contacts' ? 'active' : ''}") Контакты
->>>>>>> FETCH_HEAD
+                a(href="contacts" class="#{bodyClass=='contacts' ? 'active' : ''}") Контакты
 
       block content
 
       footer.footer
         .wrapper
-<<<<<<< HEAD
-          span © Группа компаний «Стройковъ», 2014
-          a(href="about#documents").brd-link Правовые документы
-          span.fl-r Сделано в <a href="" target="_blank" class="brd-link">ГРАФЕМА</a>
-=======
           span © ООО «Наш город», 2014
-          a(href="about.html#documents").brd-link Документы
-          span.fl-r Сделано в <a href="#" class="brd-link">ГРАФЕМА</a>
->>>>>>> FETCH_HEAD
+          a(href="about#documents").brd-link Документы
+          span.fl-r Сделано в <a href="http://grapheme.ru" target="_blank" class="brd-link">ГРАФЕМА</a>
 
       // build:js(.) scripts/vendor.js
       // bower:js
