--- a/app/layouts.jade
+++ b/app/layouts.jade
@@ -150,7 +150,7 @@ block content
 
           .layout-info
             .title КВАРТИРА ДЛЯ БОЛЬШОЙ СЕМЬИ
-            .text Внушительным габаритам помещения отвечают и пропорции двухстороннего камина на границе гостиной и столовой. Второй этаж традиционно заняли приватные комнаты, в цоколе оборудовали развлекательную зону и спа, а в мансардном этаже с открытой террасой—комнату отдыха. Столовой и кухне мы отвели более камерное помещение, а гостиную разместили в двусветном объёме. С двух сторон её огибают холл и длинный коридор, куда выходят двери рабочего кабинета, гостевого блока и лифтовой холл. Чрезмерную вертикальность гостиной мы компенсировали подбором подчёркнуто массивных элементов интерьера. Над диванной зоной парит созданная по авторскому проекту трёхметровая люстра.
+            //- .text Внушительным габаритам помещения отвечают и пропорции двухстороннего камина на границе гостиной и столовой. Второй этаж традиционно заняли приватные комнаты, в цоколе оборудовали развлекательную зону и спа, а в мансардном этаже с открытой террасой—комнату отдыха. Столовой и кухне мы отвели более камерное помещение, а гостиную разместили в двусветном объёме. С двух сторон её огибают холл и длинный коридор, куда выходят двери рабочего кабинета, гостевого блока и лифтовой холл. Чрезмерную вертикальность гостиной мы компенсировали подбором подчёркнуто массивных элементов интерьера. Над диванной зоной парит созданная по авторскому проекту трёхметровая люстра.
             .documents-ul
               li
                 a(href="#").disabled Вариант планировки 1
@@ -280,7 +280,7 @@ block content
                       span м<sup>2</sup> 
           .layout-info
             .title КВАРТИРА ДЛЯ ЭСТЕТОВ
-            .text Внушительным габаритам помещения отвечают и пропорции двухстороннего камина на границе гостиной и столовой. Второй этаж традиционно заняли приватные комнаты, в цоколе оборудовали развлекательную зону и спа, а в мансардном этаже с открытой террасой—комнату отдыха. Столовой и кухне мы отвели более камерное помещение, а гостиную разместили в двусветном объёме. С двух сторон её огибают холл и длинный коридор, куда выходят двери рабочего кабинета, гостевого блока и лифтовой холл. Чрезмерную вертикальность гостиной мы компенсировали подбором подчёркнуто массивных элементов интерьера. Над диванной зоной парит созданная по авторскому проекту трёхметровая люстра.
+            //- .text Внушительным габаритам помещения отвечают и пропорции двухстороннего камина на границе гостиной и столовой. Второй этаж традиционно заняли приватные комнаты, в цоколе оборудовали развлекательную зону и спа, а в мансардном этаже с открытой террасой—комнату отдыха. Столовой и кухне мы отвели более камерное помещение, а гостиную разместили в двусветном объёме. С двух сторон её огибают холл и длинный коридор, куда выходят двери рабочего кабинета, гостевого блока и лифтовой холл. Чрезмерную вертикальность гостиной мы компенсировали подбором подчёркнуто массивных элементов интерьера. Над диванной зоной парит созданная по авторскому проекту трёхметровая люстра.
             .documents-ul
               li
                 a(href="#").disabled Вариант планировки 2
@@ -289,7 +289,7 @@ block content
           .layout-map.free-var
           .layout-info
             .title СВОБОДНАЯ ПЛАНИРОВКА
-            .text Внушительным габаритам помещения отвечают и пропорции двухстороннего камина на границе гостиной и столовой. Второй этаж традиционно заняли приватные комнаты, в цоколе оборудовали развлекательную зону и спа, а в мансардном этаже с открытой террасой—комнату отдыха. Столовой и кухне мы отвели более камерное помещение, а гостиную разместили в двусветном объёме. С двух сторон её огибают холл и длинный коридор, куда выходят двери рабочего кабинета, гостевого блока и лифтовой холл. Чрезмерную вертикальность гостиной мы компенсировали подбором подчёркнуто массивных элементов интерьера. Над диванной зоной парит созданная по авторскому проекту трёхметровая люстра.
+            //- .text Внушительным габаритам помещения отвечают и пропорции двухстороннего камина на границе гостиной и столовой. Второй этаж традиционно заняли приватные комнаты, в цоколе оборудовали развлекательную зону и спа, а в мансардном этаже с открытой террасой—комнату отдыха. Столовой и кухне мы отвели более камерное помещение, а гостиную разместили в двусветном объёме. С двух сторон её огибают холл и длинный коридор, куда выходят двери рабочего кабинета, гостевого блока и лифтовой холл. Чрезмерную вертикальность гостиной мы компенсировали подбором подчёркнуто массивных элементов интерьера. Над диванной зоной парит созданная по авторскому проекту трёхметровая люстра.
             .documents-ul
               li
                 a(href="#").disabled Свободная планировка
