--- a/app/mortgage.jade
+++ b/app/mortgage.jade
@@ -9,7 +9,7 @@ block content
   .mortgage
     .container
       .grid_2.desc.
-        После того, как Вы подобрали квартиры подходящие под ипотеку, например, Вам подходит купить в ипотеку квартиру студию, необходимо собрать необходимые для покупки квартиры через ипотеку документы. Ипотека в Сбербанке документы на квартиру предоставляются в офис финансового учреждения или прямо в офис «Капитал-Инвест» - в этом случае рассмотрение заявки происходит быстрее, ведь документы подаются напрямую в Москву. После их утверждения Вы сможете купить в ипотеку однокомнатную квартиру в одном из наших жилых комплексов.
+        Предложения по ипотеке от банков-партнеров
       .clearfix
     .wrapper
       .mortgage-accordion.js-accordion
@@ -119,8 +119,4 @@ block content
                     <li>если вы зарплатный клиент банка «ВТБ 24»;
                     <li>если вы владелец пакета «Привилегия» или «Прайм».
                   </ul>
-
-
-
-          
   
