--- a/app/news.jade
+++ b/app/news.jade
@@ -18,6 +18,6 @@ block content
       .news-info
         .date 18 сентября 2014
         .title Получено разрешение на строительство
-        .text Получено разрешение на строительство дома от департамента архитектуры и градостроительства города Ростова-на-Дону.
+        .text Департамент архитектуры и градостроительства города Ростова-на-Дону выдал разрешение на строительство дома.
           
   
